--- a/main_jup_file.ipynb
+++ b/main_jup_file.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# импорт библиотек\n",
     "\n",
     "import pandas as pd\n",
-    "import streamlit as st"
+    "import streamlit as st\n",
+    "import plotly.graph_objects as go"
    ]
   },
   {
@@ -41,6 +42,56 @@
    ],
    "source": [
     "st.title(\"Отчет UrgY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries=['India', 'Australia',\n",
+    "           'Japan', 'America',\n",
+    "           'Russia']\n",
+    " \n",
+    "values = [4500, 2500, 1053, 500,\n",
+    "          3200]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure(\n",
+    "    go.Pie(\n",
+    "    labels = countries,\n",
+    "    values = values,\n",
+    "    hoverinfo = \"label+percent\",\n",
+    "    textinfo = \"value\"\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeltaGenerator(_root_container=0, _provided_cursor=None, _parent=None, _block_type=None, _form_data=None)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st.header(\"Pie chart\")\n",
+    "st.plotly_chart(fig)"
    ]
   },
   {
