--- a/main_jup_file.ipynb
+++ b/main_jup_file.ipynb
@@ -91,7 +91,7 @@
    ],
    "source": [
     "st.header(\"Pie chart\")\n",
-    "st.plotly_chart(fig)"
+    "st.plotly_chart(fig)\n"
    ]
   },
   {
