--- a/main_jup_file.ipynb
+++ b/main_jup_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,51 +10,22 @@
     "\n",
     "import pandas as pd\n",
     "import streamlit as st\n",
-    "import plotly.graph_objects as go"
+    "import plotly.graph_objects as go\n",
+    "import plotly.express as px"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "st.title(\"Отчет UrgY\")\n",
-    "st.set_page_config(layout=\"wide\")"
+    "###################################### дизайн страницы ######################################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "countries=['India', 'Australia',\n",
-    "           'Japan', 'America',\n",
-    "           'Russia']\n",
-    " \n",
-    "values = [4500, 2500, 1053, 500,\n",
-    "          3200]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = go.Figure(\n",
-    "    go.Pie(\n",
-    "    labels = countries,\n",
-    "    values = values,\n",
-    "    hoverinfo = \"label+percent\",\n",
-    "    textinfo = \"value\"\n",
-    "))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -63,15 +34,206 @@
        "DeltaGenerator(_root_container=0, _provided_cursor=None, _parent=None, _block_type=None, _form_data=None)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "st.header(\"Pie chart\")\n",
-    "st.plotly_chart(fig)\n"
+    "# оформление страницы с дашбордом\n",
+    "st.title(\"Отчет UrgY\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###################################### рассчеты ######################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# для отладки\n",
+    "df = pd.read_csv('/Users/arturfattahov/Downloads/Telegram Desktop/offers_statuses (3).txt', sep='|')\n",
+    "\n",
+    "\n",
+    "# для запуска\n",
+    "# count_task = \"offers_statuses (3).txt\"\n",
+    "# df = pd.read_csv(count_task, sep='|')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# обработка датафрейма\n",
+    "df = df.dropna()\n",
+    "\n",
+    "df.columns = ['offer_id', 'offer_created_at','platform','count_responds', 'count_prematch']\n",
+    "\n",
+    "df['offer_created_at'] = pd.to_datetime(df['offer_created_at'])\n",
+    "df.offer_created_at = df.offer_created_at.values.astype('M8[D]')\n",
+    "\n",
+    "df['count_responds'] = df['count_responds'].astype(int)\n",
+    "df['count_prematch'] = df['count_prematch'].astype(int)\n",
+    "\n",
+    "df['platform'] = df['platform'].str.strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# разделение даты\n",
+    "df_june = df[df['offer_created_at'] > '2022-05-31']\n",
+    "df_may = df[df['offer_created_at'] < '2022-05-31']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# общее количество задач\n",
+    "all_task_june = df_june['offer_id'].nunique()\n",
+    "all_task_may = df_may['offer_id'].nunique()\n",
+    "\n",
+    "# разниа в количестве задач\n",
+    "difference_task = all_task_june - all_task_may\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# количество созданных задач в мобльном приложении\n",
+    "task_mobile_may = df_may.query('platform == \"android\"').count()[0] + df_may.query('platform == \"ios\"').count()[0]\n",
+    "task_mobile_june = df_june.query('platform == \"android\"').count()[0] + df_june.query('platform == \"ios\"').count()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###################################### отображение элементов ######################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeltaGenerator(_root_container=0, _provided_cursor=None, _parent=None, _block_type=None, _form_data=None)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fig = px.pie(df, values='count_responds', names='platform', title='НАЗВАНИЕ ДИАГРАММЫ')\n",
+    "st.plotly_chart(fig)\n",
+    "\n",
+    "# col1, col2= st.columns(2)\n",
+    "# col1.st.plotly_chart(fig)\n",
+    "# col2.metric(label=\"Процент задач через приложения\", value=\"2.12%\", delta=\"-0.25%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
