--- a/main_jup_file.ipynb
+++ b/main_jup_file.ipynb
@@ -60,12 +60,12 @@
    "outputs": [],
    "source": [
     "# для отладки\n",
-    "df = pd.read_csv('/Users/arturfattahov/Downloads/Telegram Desktop/offers_statuses (3).txt', sep='|')\n",
+    "# df = pd.read_csv('/Users/arturfattahov/Downloads/Telegram Desktop/offers_statuses (3).txt', sep='|')\n",
     "\n",
     "\n",
     "# для запуска\n",
-    "# count_task = \"offers_statuses (3).txt\"\n",
-    "# df = pd.read_csv(count_task, sep='|')"
+    "count_task = \"offers_statuses (3).txt\"\n",
+    "df = pd.read_csv(count_task, sep='|')"
    ]
   },
   {
