--- a/main_jup_file.ipynb
+++ b/main_jup_file.ipynb
@@ -220,8 +220,28 @@
     }
    ],
    "source": [
-    "fig = px.pie(df, values='count_responds', names='platform', title='НАЗВАНИЕ ДИАГРАММЫ')\n",
+    "fig = go.Figure(\n",
+    "    go.Pie(\n",
+    "    df = df,\n",
+    "    labels = \"platform\",\n",
+    "    values = \"count_responds\",\n",
+    "    hoverinfo = \"label+percent\",\n",
+    "    textinfo = \"value\"\n",
+    "))\n",
+    "\n",
+    "st.header(\"Pie chart\")\n",
     "st.plotly_chart(fig)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# fig = px.pie(df, values='count_responds', names='platform', title='НАЗВАНИЕ ДИАГРАММЫ')\n",
+    "# st.plotly_chart(fig)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# col1, col2= st.columns(2)\n",
     "# col1.st.plotly_chart(fig)\n",
