--- a/main_jup_file.ipynb
+++ b/main_jup_file.ipynb
@@ -55,11 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# для отладки\n",
+    "# # для отладки\n",
     "# df = pd.read_csv('/Users/arturfattahov/Downloads/Telegram Desktop/offers_statuses (3).txt', sep='|')\n",
     "\n",
     "\n",
@@ -70,9 +70,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/q5/sf5nphkx7szcsxv2mhyvyml00000gn/T/ipykernel_51157/3991111934.py:6: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "/var/folders/q5/sf5nphkx7szcsxv2mhyvyml00000gn/T/ipykernel_51157/3991111934.py:7: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "/var/folders/q5/sf5nphkx7szcsxv2mhyvyml00000gn/T/ipykernel_51157/3991111934.py:9: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "/var/folders/q5/sf5nphkx7szcsxv2mhyvyml00000gn/T/ipykernel_51157/3991111934.py:10: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "/var/folders/q5/sf5nphkx7szcsxv2mhyvyml00000gn/T/ipykernel_51157/3991111934.py:12: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# обработка датафрейма\n",
     "df = df.dropna()\n",
@@ -182,17 +229,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df6 = (\n",
+    "    df_june\n",
+    "    .pivot_table(index=[\"platform\"], values='offer_id', aggfunc='count'))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>offer_id</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>platform</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>admins</th>\n",
+       "      <td>11662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>android</th>\n",
+       "      <td>205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ios</th>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>web</th>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          offer_id\n",
+       "platform          \n",
+       "                51\n",
+       "admins       11662\n",
+       "android        205\n",
+       "ios             56\n",
+       "web             43"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df6"
+   ]
   },
   {
    "cell_type": "code",
@@ -220,7 +341,11 @@
     }
    ],
    "source": [
-    "fig = px.pie(df, values='count_responds', names='platform', title='Распределение ')\n",
+    "# fig = px.pie(df, values='count_responds', names='platform', title='Распределение')\n",
+    "# st.plotly_chart(fig)\n",
+    "\n",
+    "\n",
+    "fig = px.pie(df6, values='offer_id', names='df6.index', title='Распределение')\n",
     "st.plotly_chart(fig)\n",
     "\n",
     "\n",
@@ -231,13 +356,6 @@
     "# col1.st.plotly_chart(fig)\n",
     "# col2.metric(label=\"Процент задач через приложения\", value=\"2.12%\", delta=\"-0.25%\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
