--- a/main_jup_file.ipynb
+++ b/main_jup_file.ipynb
@@ -240,7 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df6 = df6.reset_index()\n",
+    "df6.columns = ['state', 'id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -264,32 +274,34 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>offer_id</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>platform</th>\n",
-       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <td></td>\n",
        "      <td>51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>admins</th>\n",
+       "      <th>1</th>\n",
+       "      <td>admins</td>\n",
        "      <td>11662</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>android</th>\n",
+       "      <th>2</th>\n",
+       "      <td>android</td>\n",
        "      <td>205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ios</th>\n",
+       "      <th>3</th>\n",
+       "      <td>ios</td>\n",
        "      <td>56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>web</th>\n",
+       "      <th>4</th>\n",
+       "      <td>web</td>\n",
        "      <td>43</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -297,22 +309,21 @@
        "</div>"
       ],
       "text/plain": [
-       "          offer_id\n",
-       "platform          \n",
-       "                51\n",
-       "admins       11662\n",
-       "android        205\n",
-       "ios             56\n",
-       "web             43"
+       "     state     id\n",
+       "0              51\n",
+       "1   admins  11662\n",
+       "2  android    205\n",
+       "3      ios     56\n",
+       "4      web     43"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df6"
+    "df6\n"
    ]
   },
   {
@@ -345,7 +356,7 @@
     "# st.plotly_chart(fig)\n",
     "\n",
     "\n",
-    "fig = px.pie(df6, values='offer_id', names='df6.index', title='Распределение')\n",
+    "fig = px.pie(df6, values='id', names='state', title='Распределение')\n",
     "st.plotly_chart(fig)\n",
     "\n",
     "\n",
