--- a/main_jup_file.ipynb
+++ b/main_jup_file.ipynb
@@ -70,56 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/q5/sf5nphkx7szcsxv2mhyvyml00000gn/T/ipykernel_51157/3991111934.py:6: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "/var/folders/q5/sf5nphkx7szcsxv2mhyvyml00000gn/T/ipykernel_51157/3991111934.py:7: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "/var/folders/q5/sf5nphkx7szcsxv2mhyvyml00000gn/T/ipykernel_51157/3991111934.py:9: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "/var/folders/q5/sf5nphkx7szcsxv2mhyvyml00000gn/T/ipykernel_51157/3991111934.py:10: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "/var/folders/q5/sf5nphkx7szcsxv2mhyvyml00000gn/T/ipykernel_51157/3991111934.py:12: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# обработка датафрейма\n",
     "df = df.dropna()\n",
@@ -132,7 +85,7 @@
     "df['count_responds'] = df['count_responds'].astype(int)\n",
     "df['count_prematch'] = df['count_prematch'].astype(int)\n",
     "\n",
-    "df['platform'] = df['platform'].str.strip()\n"
+    "df['platform'] = df['platform'].str.strip()"
    ]
   },
   {
@@ -170,13 +123,6 @@
     "task_mobile_may = df_may.query('platform == \"android\"').count()[0] + df_may.query('platform == \"ios\"').count()[0]\n",
     "task_mobile_june = df_june.query('platform == \"android\"').count()[0] + df_june.query('platform == \"ios\"').count()[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -242,35 +188,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Value of 'values' is not the name of a column in 'data_frame'. Expected one of ['platform', 'count_task'] but received: id",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/arturfattahov/UrgYdDashboard/main_jup_file.ipynb Cell 18'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/arturfattahov/UrgYdDashboard/main_jup_file.ipynb#ch0000010?line=0'>1</a>\u001b[0m fig \u001b[39m=\u001b[39m px\u001b[39m.\u001b[39;49mpie(\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/arturfattahov/UrgYdDashboard/main_jup_file.ipynb#ch0000010?line=1'>2</a>\u001b[0m     count_task_platform_june,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/arturfattahov/UrgYdDashboard/main_jup_file.ipynb#ch0000010?line=2'>3</a>\u001b[0m     values\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mid\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/arturfattahov/UrgYdDashboard/main_jup_file.ipynb#ch0000010?line=3'>4</a>\u001b[0m     names\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mcount_task\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/arturfattahov/UrgYdDashboard/main_jup_file.ipynb#ch0000010?line=4'>5</a>\u001b[0m     title\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mРаспределение задач по платформе\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/arturfattahov/UrgYdDashboard/main_jup_file.ipynb#ch0000010?line=5'>6</a>\u001b[0m     labels\u001b[39m=\u001b[39;49m{\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/arturfattahov/UrgYdDashboard/main_jup_file.ipynb#ch0000010?line=6'>7</a>\u001b[0m                 \u001b[39m\"\u001b[39;49m\u001b[39mplatform\u001b[39;49m\u001b[39m\"\u001b[39;49m: \u001b[39m\"\u001b[39;49m\u001b[39mПлатформа\u001b[39;49m\u001b[39m\"\u001b[39;49m,  \u001b[39m\"\u001b[39;49m\u001b[39mcount_task\u001b[39;49m\u001b[39m\"\u001b[39;49m: \u001b[39m\"\u001b[39;49m\u001b[39mКоличество задач\u001b[39;49m\u001b[39m\"\u001b[39;49m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/arturfattahov/UrgYdDashboard/main_jup_file.ipynb#ch0000010?line=7'>8</a>\u001b[0m             })\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/arturfattahov/UrgYdDashboard/main_jup_file.ipynb#ch0000010?line=8'>9</a>\u001b[0m st\u001b[39m.\u001b[39mplotly_chart(fig)\n",
-      "File \u001b[0;32m~/Library/Python/3.10/lib/python/site-packages/plotly/express/_chart_types.py:1473\u001b[0m, in \u001b[0;36mpie\u001b[0;34m(data_frame, names, values, color, color_discrete_sequence, color_discrete_map, hover_name, hover_data, custom_data, labels, title, template, width, height, opacity, hole)\u001b[0m\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_chart_types.py?line=1470'>1471</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_chart_types.py?line=1471'>1472</a>\u001b[0m     layout_patch \u001b[39m=\u001b[39m {}\n\u001b[0;32m-> <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_chart_types.py?line=1472'>1473</a>\u001b[0m \u001b[39mreturn\u001b[39;00m make_figure(\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_chart_types.py?line=1473'>1474</a>\u001b[0m     args\u001b[39m=\u001b[39;49m\u001b[39mlocals\u001b[39;49m(),\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_chart_types.py?line=1474'>1475</a>\u001b[0m     constructor\u001b[39m=\u001b[39;49mgo\u001b[39m.\u001b[39;49mPie,\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_chart_types.py?line=1475'>1476</a>\u001b[0m     trace_patch\u001b[39m=\u001b[39;49m\u001b[39mdict\u001b[39;49m(showlegend\u001b[39m=\u001b[39;49m(names \u001b[39mis\u001b[39;49;00m \u001b[39mnot\u001b[39;49;00m \u001b[39mNone\u001b[39;49;00m), hole\u001b[39m=\u001b[39;49mhole),\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_chart_types.py?line=1476'>1477</a>\u001b[0m     layout_patch\u001b[39m=\u001b[39;49mlayout_patch,\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_chart_types.py?line=1477'>1478</a>\u001b[0m )\n",
-      "File \u001b[0;32m~/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py:1948\u001b[0m, in \u001b[0;36mmake_figure\u001b[0;34m(args, constructor, trace_patch, layout_patch)\u001b[0m\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1944'>1945</a>\u001b[0m layout_patch \u001b[39m=\u001b[39m layout_patch \u001b[39mor\u001b[39;00m {}\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1945'>1946</a>\u001b[0m apply_default_cascade(args)\n\u001b[0;32m-> <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1947'>1948</a>\u001b[0m args \u001b[39m=\u001b[39m build_dataframe(args, constructor)\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1948'>1949</a>\u001b[0m \u001b[39mif\u001b[39;00m constructor \u001b[39min\u001b[39;00m [go\u001b[39m.\u001b[39mTreemap, go\u001b[39m.\u001b[39mSunburst, go\u001b[39m.\u001b[39mIcicle] \u001b[39mand\u001b[39;00m args[\u001b[39m\"\u001b[39m\u001b[39mpath\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1949'>1950</a>\u001b[0m     args \u001b[39m=\u001b[39m process_dataframe_hierarchy(args)\n",
-      "File \u001b[0;32m~/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py:1405\u001b[0m, in \u001b[0;36mbuild_dataframe\u001b[0;34m(args, constructor)\u001b[0m\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1401'>1402</a>\u001b[0m     args[\u001b[39m\"\u001b[39m\u001b[39mcolor\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1402'>1403</a>\u001b[0m \u001b[39m# now that things have been prepped, we do the systematic rewriting of `args`\u001b[39;00m\n\u001b[0;32m-> <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1404'>1405</a>\u001b[0m df_output, wide_id_vars \u001b[39m=\u001b[39m process_args_into_dataframe(\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1405'>1406</a>\u001b[0m     args, wide_mode, var_name, value_name\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1406'>1407</a>\u001b[0m )\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1408'>1409</a>\u001b[0m \u001b[39m# now that `df_output` exists and `args` contains only references, we complete\u001b[39;00m\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1409'>1410</a>\u001b[0m \u001b[39m# the special-case and wide-mode handling by further rewriting args and/or mutating\u001b[39;00m\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1410'>1411</a>\u001b[0m \u001b[39m# df_output\u001b[39;00m\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1412'>1413</a>\u001b[0m count_name \u001b[39m=\u001b[39m _escape_col_name(df_output, \u001b[39m\"\u001b[39m\u001b[39mcount\u001b[39m\u001b[39m\"\u001b[39m, [var_name, value_name])\n",
-      "File \u001b[0;32m~/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py:1207\u001b[0m, in \u001b[0;36mprocess_args_into_dataframe\u001b[0;34m(args, wide_mode, var_name, value_name)\u001b[0m\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1204'>1205</a>\u001b[0m         \u001b[39mif\u001b[39;00m argument \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mindex\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1205'>1206</a>\u001b[0m             err_msg \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m To use the index, pass it in directly as `df.index`.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m-> <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1206'>1207</a>\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(err_msg)\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1207'>1208</a>\u001b[0m \u001b[39melif\u001b[39;00m length \u001b[39mand\u001b[39;00m \u001b[39mlen\u001b[39m(df_input[argument]) \u001b[39m!=\u001b[39m length:\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1208'>1209</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1209'>1210</a>\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mAll arguments should have the same length. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1210'>1211</a>\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mThe length of column argument `df[\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m]` is \u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m, whereas the \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1217'>1218</a>\u001b[0m         )\n\u001b[1;32m   <a href='file:///Users/arturfattahov/Library/Python/3.10/lib/python/site-packages/plotly/express/_core.py?line=1218'>1219</a>\u001b[0m     )\n",
-      "\u001b[0;31mValueError\u001b[0m: Value of 'values' is not the name of a column in 'data_frame'. Expected one of ['platform', 'count_task'] but received: id"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# создание круговой диаграммы [Распределение задач по платформе]\n",
     "fig = px.pie(\n",
     "    count_task_platform_june,\n",
-    "    values='id',\n",
-    "    names='count_task',\n",
+    "    values='count_task',\n",
+    "    names='platform',\n",
     "    title='Распределение задач по платформе',\n",
     "    labels={\n",
     "                \"platform\": \"Платформа\",  \"count_task\": \"Количество задач\"\n",
     "            })\n",
-    "st.plotly_chart(fig)"
+    "\n",
+    "st.metric(label=\"Количество созданных задач, июнь\", value=all_task_june, delta=difference_task)"
    ]
   },
   {
