--- a/main_jup_file.ipynb
+++ b/main_jup_file.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,8 +109,23 @@
     "all_task_june = df_june['offer_id'].nunique()\n",
     "all_task_may = df_may['offer_id'].nunique()\n",
     "\n",
-    "# разниа в количестве задач\n",
-    "difference_task = all_task_june - all_task_may\n"
+    "task_june_ios = df_june.query('platform == \"ios\"').count()[0]\n",
+    "task_june_android = df_june.query('platform == \"android\"').count()[0]\n",
+    "task_june_admins = df_june.query('platform == \"admins\"').count()[0]\n",
+    "task_june_web = df_june.query('platform == \"web\"').count()[0]\n",
+    "\n",
+    "\n",
+    "task_may_ios = df_may.query('platform == \"ios\"').count()[0]\n",
+    "task_may_android = df_may.query('platform == \"android\"').count()[0]\n",
+    "task_may_admins = df_may.query('platform == \"admins\"').count()[0]\n",
+    "task_may_web = df_may.query('platform == \"web\"').count()[0]\n",
+    "\n",
+    "# разниа в количестве задач, общее\n",
+    "difference_task = all_task_june - all_task_may\n",
+    "difference_task_ios = task_june_ios - task_may_ios\n",
+    "difference_task_android = task_june_android - task_may_android\n",
+    "difference_task_admins = task_june_admins - task_may_admins\n",
+    "difference_task_web = task_june_web - task_may_web"
    ]
   },
   {
@@ -144,10 +159,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['admins', 'ios', 'android', 'web', ''], dtype=object)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_june['platform'].unique()"
+   ]
   },
   {
    "cell_type": "code",
@@ -192,7 +220,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# создание круговой диаграммы [Распределение задач по платформе]\n",
+    "# количество созданных задач\n",
+    "st.subheader(\"Количество созданных задач\")\n",
+    "\n",
     "fig = px.pie(\n",
     "    count_task_platform_june,\n",
     "    values='count_task',\n",
@@ -202,15 +232,20 @@
     "                \"platform\": \"Платформа\",  \"count_task\": \"Количество задач\"\n",
     "            })\n",
     "\n",
-    "st.metric(label=\"Количество созданных задач, июнь\", value=all_task_june, delta=difference_task)"
+    "col1, col2 = st.columns(2)\n",
+    "with col1:\n",
+    "    st.metric(label=\"Количество созданных задач, июнь\", value=all_task_june, delta=difference_task)\n",
+    "with col2:\n",
+    "    st.plotly_chart(fig)\n",
+    "\n",
+    "\n",
+    "with st.expander(\"Динамика по платформам\"):\n",
+    "     col1, col2, col3, col4 = st.columns(4)\n",
+    "     col1.metric(\"iOS\", task_june_ios, difference_task_ios)\n",
+    "     col2.metric(\"Android\", task_june_android, difference_task_android)\n",
+    "     col3.metric(\"Admins\", task_june_admins, difference_task_admins)\n",
+    "     col3.metric(\"WEB\", task_june_web, difference_task_web)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
