--- a/main_jup_file.ipynb
+++ b/main_jup_file.ipynb
@@ -121,11 +121,11 @@
     "task_may_web = df_may.query('platform == \"web\"').count()[0]\n",
     "\n",
     "# разниа в количестве задач, общее\n",
-    "difference_task = all_task_june - all_task_may\n",
-    "difference_task_ios = task_june_ios - task_may_ios\n",
-    "difference_task_android = task_june_android - task_may_android\n",
-    "difference_task_admins = task_june_admins - task_may_admins\n",
-    "difference_task_web = task_june_web - task_may_web"
+    "difference_task = str(all_task_june - all_task_may)\n",
+    "difference_task_ios = str(task_june_ios - task_may_ios)\n",
+    "difference_task_android = str(task_june_android - task_may_android)\n",
+    "difference_task_admins = str(task_june_admins - task_may_admins)\n",
+    "difference_task_web = str(task_june_web - task_may_web)"
    ]
   },
   {
