--- a/main_jup_file.ipynb
+++ b/main_jup_file.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,12 +125,22 @@
     "difference_task_ios = str(task_june_ios - task_may_ios)\n",
     "difference_task_android = str(task_june_android - task_may_android)\n",
     "difference_task_admins = str(task_june_admins - task_may_admins)\n",
-    "difference_task_web = str(task_june_web - task_may_web)"
+    "difference_task_web = str(task_june_web - task_may_web)\n",
+    "\n",
+    "# процент задач через приложение\n",
+    "count_mobile_task_june = task_mobile_june * 100 / all_task_june\n",
+    "count_mobile_task_june = count_mobile_task_june.round(2)\n",
+    "\n",
+    "count_mobile_task_may = task_mobile_may * 100 / all_task_june\n",
+    "count_mobile_task_may = count_mobile_task_may.round(2)\n",
+    "\n",
+    "difference_mobile_task = count_mobile_task_june - count_mobile_task_may\n",
+    "difference_mobile_task = str(difference_mobile_task.round(2))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,11 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# общее количество созданных задач по платформам\n",
+    "# сощдание датафрейма для диаграммы общее количество созданных задач по платформам\n",
     "\n",
     "count_task_platform_june = (\n",
     "    df_june\n",
@@ -156,33 +166,6 @@
     "\n",
     "count_task_platform_june = count_task_platform_june.query('platform != \"''\"')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['admins', 'ios', 'android', 'web', ''], dtype=object)"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_june['platform'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -232,19 +215,23 @@
     "                \"platform\": \"Платформа\",  \"count_task\": \"Количество задач\"\n",
     "            })\n",
     "\n",
-    "col1, col2 = st.columns(2)\n",
+    "col1, col2, col3, col4, col5 = st.columns(5)\n",
     "with col1:\n",
     "    st.metric(label=\"Количество созданных задач, июнь\", value=all_task_june, delta=difference_task)\n",
     "with col2:\n",
-    "    st.plotly_chart(fig)\n",
+    "    st.metric(\"iOS\", task_june_ios, difference_task_ios)\n",
+    "with col3:\n",
+    "    st.metric(\"Android\", task_june_android, difference_task_android)\n",
+    "with col4:\n",
+    "    st.metric(\"WEB\", task_june_web, difference_task_web)\n",
+    "with col5:\n",
+    "    st.metric(\"WEB\", task_june_web, difference_task_web)\n",
+    "with col5:\n",
+    "    st.metric(\"Процент задач через приложение\", count_mobile_task_june, difference_mobile_task)\n",
     "\n",
     "\n",
-    "with st.expander(\"Динамика по платформам\"):\n",
-    "     col1, col2, col3, col4 = st.columns(4)\n",
-    "     col1.metric(\"iOS\", task_june_ios, difference_task_ios)\n",
-    "     col2.metric(\"Android\", task_june_android, difference_task_android)\n",
-    "     col3.metric(\"Admins\", task_june_admins, difference_task_admins)\n",
-    "     col3.metric(\"WEB\", task_june_web, difference_task_web)"
+    "\n",
+    "st.plotly_chart(fig)"
    ]
   }
  ],
