--- a/main_jup_file.ipynb
+++ b/main_jup_file.ipynb
@@ -215,7 +215,7 @@
     "                \"platform\": \"Платформа\",  \"count_task\": \"Количество задач\"\n",
     "            })\n",
     "\n",
-    "col1, col2, col3, col4, col5 = st.columns(5)\n",
+    "col1, col2, col3, col4, col5, col6 = st.columns(6)\n",
     "with col1:\n",
     "    st.metric(label=\"Количество созданных задач, июнь\", value=all_task_june, delta=difference_task)\n",
     "with col2:\n",
@@ -226,7 +226,7 @@
     "    st.metric(\"WEB\", task_june_web, difference_task_web)\n",
     "with col5:\n",
     "    st.metric(\"WEB\", task_june_web, difference_task_web)\n",
-    "with col5:\n",
+    "with col6:\n",
     "    st.metric(\"Процент задач через приложение\", count_mobile_task_june, difference_mobile_task)\n",
     "\n",
     "\n",
