--- a/main_jup_file.ipynb
+++ b/main_jup_file.ipynb
@@ -199,9 +199,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeltaGenerator(_root_container=0, _provided_cursor=None, _parent=None, _block_type=None, _form_data=None)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# количество созданных задач\n",
     "st.subheader(\"Количество созданных задач\")\n",
@@ -217,7 +228,7 @@
     "\n",
     "col1, col2, col3, col4, col5, col6 = st.columns(6)\n",
     "with col1:\n",
-    "    st.metric(label=\"Количество созданных задач, июнь\", value=all_task_june, delta=difference_task)\n",
+    "    st.metric(label=\"All\", value=all_task_june, delta=difference_task)\n",
     "with col2:\n",
     "    st.metric(\"iOS\", task_june_ios, difference_task_ios)\n",
     "with col3:\n",
@@ -225,7 +236,7 @@
     "with col4:\n",
     "    st.metric(\"WEB\", task_june_web, difference_task_web)\n",
     "with col5:\n",
-    "    st.metric(\"WEB\", task_june_web, difference_task_web)\n",
+    "    st.metric(\"Admins\", task_june_admins, difference_task_admins)\n",
     "with col6:\n",
     "    st.metric(\"Процент задач через приложение\", count_mobile_task_june, difference_mobile_task)\n",
     "\n",
