--- a/main_jup_file.ipynb
+++ b/main_jup_file.ipynb
@@ -146,7 +146,9 @@
     "count_mobile_task_may = count_mobile_task_may.round(2)\n",
     "\n",
     "difference_mobile_task = count_mobile_task_june - count_mobile_task_may\n",
-    "difference_mobile_task = str(difference_mobile_task.round(2))\n"
+    "difference_mobile_task = str(difference_mobile_task.round(2)) + \"%\"\n",
+    "\n",
+    "count_mobile_task_june = str(count_mobile_task_june) + \"%\"\n"
    ]
   },
   {
